# loglens

./: .gitignore  LICENSE  README.md  render.yaml
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  alembic.ini  auth.py  database.py  logging_config.py  main.py  pyproject.toml  requirements-test.txt  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_projects_and_api_keys.py  003_add_webhooks.py
backend/api/: index.py
backend/models/: __init__.py  event.py  project.py  webhook.py
backend/routers/: __init__.py  events.py  projects.py  stream.py  webhooks.py
backend/tests/: conftest.py  test_events.py  test_health.py  test_stream.py
frontend/: .env.example  next.config.ts  package-lock.json  package.json  vercel.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/[...path]/: route.ts
frontend/components/: ErrorsByServiceChart.tsx  ErrorsOverTimeChart.tsx  SeverityBadge.tsx  StackTraceViewer.tsx  StatsCard.tsx  Toast.tsx
frontend/lib/: api.ts  types.ts
frontend/tests/: SeverityBadge.test.tsx  StackTraceViewer.test.tsx  StatsCard.test.tsx  api.test.ts
sdk/: README.md  pyproject.toml
sdk/loglens_sdk/: __init__.py  client.py
