[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "loglens-sdk"
version = "1.0.0"
description = "Python SDK for the LogLens error monitoring platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["logging", "error-monitoring", "loglens", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Logging",
]
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "responses"]

[project.urls]
Repository = "https://github.com/AaronCx/loglens"

[tool.setuptools.packages.find]
where = ["."]
include = ["loglens_sdk*"]
